Fix spacing between list items & removed feature image from posts when theme is not selected

--- a/assets/_sass/base/_typography.scss
+++ b/assets/_sass/base/_typography.scss
@@ -3,9 +3,9 @@ button,
 input,
 select,
 textarea {
-	@extend %body-text;
-	-webkit-font-smoothing: antialiased;
-	-moz-osx-font-smoothing: grayscale;
+  @extend %body-text;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
 /*================================
@@ -13,35 +13,35 @@ textarea {
 ================================*/
 
 h1 {
-	@extend %h1 !optional;
-	margin: 1rem 0;
+  @extend %h1 !optional;
+  margin: 1rem 0;
 }
 
 h2 {
-	@extend %h2 !optional;
-	margin: 0 0 1rem;
+  @extend %h2 !optional;
+  margin: 0 0 1rem;
 }
 
 h3 {
-	@extend %h3 !optional;
-	margin: 0.75rem 0;
+  @extend %h3 !optional;
+  margin: 0.75rem 0;
 }
 
 h4 {
-	@extend %h4 !optional;
-	margin: 0.75rem 0;
+  @extend %h4 !optional;
+  margin: 0.75rem 0;
 }
 
 .section-title {
-	@extend %section-title;
-	text-transform: uppercase;
-	margin-top: 0;
+  @extend %section-title;
+  text-transform: uppercase;
+  margin-top: 0;
 }
 
 .section-title-lg {
-	@extend %section-title-lg;
-	text-transform: uppercase;
-	margin: 0 0 1.5rem;
+  @extend %section-title-lg;
+  text-transform: uppercase;
+  margin: 0 0 1.5rem;
 }
 
 /*============================
@@ -49,130 +49,149 @@ h4 {
 ============================*/
 
 p {
-	margin: 0 0 1rem;
+  margin: 0 0 1rem;
 }
 
 @for $i from 2 through 6 {
   p + h#{$i},
   ul + h#{$i},
   ol + h#{$i} {
-  	margin-top: 2.5rem;
+    margin-top: 2.5rem;
   }
 }
 
 hr {
-	background-color: $color__background-hr;
-	border: 0;
-	height: 1px;
-	margin: 2rem 0;
-	clear: both;
+  background-color: $color__background-hr;
+  border: 0;
+  height: 1px;
+  margin: 2rem 0;
+  clear: both;
 }
 
-b, strong {
-	font-weight: 600;
+b,
+strong {
+  font-weight: 600;
 }
 
-dfn, cite, em, i {
-	font-style: italic;
+dfn,
+cite,
+em,
+i {
+  font-style: italic;
 }
 
 blockquote {
-	@extend %blockquote;
-	@extend .post__content-overflow;
+  @extend %blockquote;
+  @extend .post__content-overflow;
 
-	@include breakpoint('medium') {
-	  margin-top: 0;
-	}
-	
-	p {
-		font-family: inherit;
-		font-size: inherit;
-		line-height: inherit;
-		color: inherit;
-		font-weight: inherit;
-		margin-bottom: 0;
-	}
+  @include breakpoint('medium') {
+    margin-top: 0;
+  }
 
-	cite {}
+  p {
+    font-family: inherit;
+    font-size: inherit;
+    line-height: inherit;
+    color: inherit;
+    font-weight: inherit;
+    margin-bottom: 0;
+  }
+
+  cite {
+  }
 }
 
-blockquote, q {
-	quotes: "" "";
+blockquote,
+q {
+  quotes: '' '';
 
-	&:before,
-	&:after {
-		content: "";
-	}
+  &:before,
+  &:after {
+    content: '';
+  }
 }
 
 address {
-	font-style: normal;
-	margin: 0 0 1rem;
+  font-style: normal;
+  margin: 0 0 1rem;
 }
 
 pre {
-	background: $color__background-pre;
-	font-family: $font__pre;
-	@include font-size(14px);
-	line-height: $font__line-height-pre;
-	margin-bottom: 1.6em;
-	max-width: 100%;
-	overflow: auto;
-	padding: 1.6em;
+  background: $color__background-pre;
+  font-family: $font__pre;
+  @include font-size(14px);
+  line-height: $font__line-height-pre;
+  margin-bottom: 1.6em;
+  max-width: 100%;
+  overflow: auto;
+  padding: 1.6em;
 }
 
-code, kbd, tt, var {
-	font-family: $font__code;
-	@include font-size(14px);
+code,
+kbd,
+tt,
+var {
+  font-family: $font__code;
+  @include font-size(14px);
 }
 
-abbr, acronym {
-	border-bottom: 1px dotted $color__border-abbr;
-	cursor: help;
+abbr,
+acronym {
+  border-bottom: 1px dotted $color__border-abbr;
+  cursor: help;
 }
 
 big {
-	font-size: 125%;
+  font-size: 125%;
 }
 
+.post__content {
+  ol,
+  ul {
+    li {
+      margin-bottom: 0.6rem;
+      line-height: 1.5;
+    }
+  }
+}
 
 /*=============================
 =            Links            =
 =============================*/
 
 a {
-	color: inherit;
-	text-decoration: none;
-	transition: all 0.3s ease-in-out;
+  color: inherit;
+  text-decoration: none;
+  transition: all 0.3s ease-in-out;
 
-	&:visited {
-		color: $color__link-visited;
-	}
-	&:hover,
-	&:focus,
-	&:active {
-		color: $color__link-hover;
-		border: 0;
-	}
-	&:focus {
-		outline: thin dotted;
-	}
-	&:hover,
-	&:active {
-		outline: 0;
-	}
+  &:visited {
+    color: $color__link-visited;
+  }
+  &:hover,
+  &:focus,
+  &:active {
+    color: $color__link-hover;
+    border: 0;
+  }
+  &:focus {
+    outline: thin dotted;
+  }
+  &:hover,
+  &:active {
+    outline: 0;
+  }
 
-	.post__content &:not(.btn) {
-		color: inherit;
-		@include box-shadow(0px, -2px, 0px, 0, $color-dust, true);
+  .post__content &:not(.btn) {
+    color: inherit;
+    @include box-shadow(0px, -2px, 0px, 0, $color-dust, true);
 
-		&:visited {
-			color: $color-slate;
-		}
+    &:visited {
+      color: $color-slate;
+    }
 
-		&:hover {
-			color: $color-dust;
-			box-shadow: none;
-		}
-	}
+    &:hover {
+      color: $color-dust;
+      box-shadow: none;
+    }
+  }
 }
